# TeenieChain

./: .gitignore  LICENSE  README.md  pyproject.toml
ChainAPI/: main.py
ChainAPI/ChainAPI/: asgi.py  settings.py  urls.py  wsgi.py
TeenieChain/: Block.py  TeenieChain.py  main.py
TeenieChain/transactions/: Transaction.py
api/: main.py
api/src/domain/chain/controller/: ChainController.py
api/src/domain/chain/dto/req/: BlockReqDto.py  MintReqDto.py  PowReqDto.py
api/src/domain/chain/dto/res/: ChainResDto.py  GetTotalSupplyResDto.py  HashResDto.py  NameResDto.py
api/src/domain/chain/service/: ChainService.py
